@@ -29,14 +29,14 @@ $(function() {
    // in them, we want to double their number of rows
    $('textarea.autoexpanding').each(function() {
       while (_getNoLines(this) > parseInt(this.rows))
-        this.rows = '' + Math.round((parseInt(this.rows) * 1.5));
+        this.rows = '' + Math.round((parseInt(this.rows) * 1.6));
    });
             
    // When a user enters new lines, if they have entered more
    // lines than the textarea has rows, then double the textareas rows
    $('textarea.autoexpanding').bind('keyup', function() {
       if (_getNoLines(this) > parseInt(this.rows))
-        this.rows = '' + Math.round((parseInt(this.rows) * 1.5));
+        this.rows = '' + Math.round((parseInt(this.rows) * 1.6));
    });
    
 });
